--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <img src="advertising-1.jpg">
+<img src="advertising-2.jpg">
+<img src="advertising-3.jpg">
+<img src="advertising-4.jpg">
+<img src="avatar.jpg">
+<img src="advertising-1.jpg">
+<img src="advertising-1.jpg">
+<img src="advertising-1.jpg">
+<img src="advertising-1.jpg">
