--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <img src="advertising-3.jpg">
 <img src="advertising-4.jpg">
 <img src="avatar.jpg">
-<img src="advertising-1.jpg">
-<img src="advertising-1.jpg">
-<img src="advertising-1.jpg">
+<img src="blog1.jpg">
+<img src="blog2.jpg">
+<img src="blog3.jpg">
 <img src="advertising-1.jpg">
