--- a/index.html
+++ b/index.html
@@ -6,4 +6,14 @@
 <img src="blog1.jpg">
 <img src="blog2.jpg">
 <img src="blog3.jpg">
-<img src="advertising-1.jpg">
+<img src="branding-1.jpg">
+<img src="branding-2.jpg">
+<img src="branding-3.jpg">
+<img src="branding-4.jpg">
+<img src="branding-5.jpg">
+<img src="header.jpg">
+<img src="web-1.jpg">
+<img src="web-2.jpg">
+<img src="web-3.jpg">
+<img src="web-4.jpg">
+
