--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="javascript.html">javascript<a/>
 <img src="advertising-1.jpg">
 <img src="advertising-2.jpg">
 <img src="advertising-3.jpg">
