--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <img src="blog2.jpg">
 <img src="blog3.jpg">
 <img src="branding-1.jpg">
-<img src="branding-2.jpg">
+<img src="branding-2.png">
 <img src="branding-3.jpg">
 <img src="branding-4.jpg">
 <img src="branding-5.jpg">
