--- a/js/javascript.html
+++ b/js/javascript.html
@@ -148,4 +148,11 @@ function initMap() {
         }
       ]
     });
+
+}
+
+// Verificar si la página se cargó desde la caché del navegador
+if (performance.navigation.type === 1) {
+  // Forzar una recarga de la página
+  location.reload(true);
 }
