--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <a href="js/javascript.html">javascript<a/>
 <a href="js/johndoe.js">javascript 2<a/>
+<img src="ALONE PORTADA FINAL Edicion 1.jpg">
 <img src="advertising-1.jpg">
 <img src="advertising-2.jpg">
 <img src="advertising-3.jpg">
