--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <a href="js/javascript.html">javascript<a/>
 <a href="js/johndoe.js">javascript 2<a/>
 <img src="00004-1436074171.png">
-<img src="advertising-1.jpg">
+<img src="banner_1.png">
 <img src="advertising-2.jpg">
 <img src="advertising-3.jpg">
 <img src="advertising-4.jpg">
