--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <a href="js/johndoe.js">javascript 2<a/>
 <img src="00004-1436074171.png">
 <img src="banner_1.png">
-<img src="advertising-2.jpg">
+<img src="Logo 2 Freemations Medio Transparente.png">
 <img src="advertising-3.jpg">
 <img src="advertising-4.jpg">
 <img src="avatar.jpg">
