--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <img src="00004-1436074171.png">
 <img src="banner_1.png">
 <img src="Logo 2 Freemations Medio Transparente.png">
-<img src="Freemations.apk">
+<a href="Freemations.apk">Freemations</a>
 <img src="advertising-4.jpg">
 <img src="avatar.jpg">
 <img src="blog1.jpg">
