--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <img src="banner_1.png">
 <img src="Logo 2 Freemations Medio Transparente.png">
 <a href="Freemations.apk">Freemations</a>
-<img src="00030-3269770256.png">
+<a href="index.css">Index.css</a>
 <img src="avatar.jpg">
 <img src="blog1.jpg">
 <img src="blog2.jpg">
