--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 <img src="Logo 2 Freemations Medio Transparente.png">
 <a href="Freemations.apk">Freemations</a>
 <a href="index.css">Index.css</a>
+<a href="index.js">Index.js</a>
+<a href="jquery.min.js">jquery.min.js</a>
+<a href="particles.js">particles.js</a>
+<a href="particles.min.js">particles.min.js</a>
