--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
 <a href="jquery.min.js">jquery.min.js</a>
 <a href="particles.js">particles.js</a>
 <a href="particles.min.js">particles.min.js</a>
+<img src = "linewebtoon.svg" alt="Mi SVG feliz"/>
