--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
 <a href="jquery.min.js">jquery.min.js</a>
 <a href="particles.js">particles.js</a>
 <a href="particles.min.js">particles.min.js</a>
+  <a href="particles.min.js">particles.min.js</a>
 <img src = "linewebtoon.svg"/>
